--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@babel/core": "^7.24.7",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "postcss": "^8.4.39",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.4"
   },
   "dependencies": {
     "react": "^18.3.1",
