--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "react course",
   "scripts": {
-    "start": "npx parcel index.html",
+    "start": "npx parcel index.html && parcel watch index.html",
     "build": "npx parcel build index.html"
   },
   "author": "",
@@ -17,6 +17,9 @@
     "tailwindcss": "^3.4.4"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1"
