--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.4",
+    "concurrently": "^8.2.2",
+    "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
