--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.7",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "buffer": "^6.0.3",
     "parcel": "^2.12.0",
     "postcss": "^8.4.39",
     "process": "^0.11.10",
